<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="item_product_code">Code: %1$s</string>
    <string name="item_product_price">%1$s₽</string>

    <string name="error_products_not_found"> Products not found</string>
    <string name="error_get_products">Failed to receive the goods</string>
    <string name="error_internet_connection">No internet connection, please check the connection</string>

    <string name="select_product_count">Count</string>
    <string name="select_product_price">Price</string>
    <string name="select_product_retail_amount">Retail amount</string>
    <string name="select_product_alcohol">Alcohol product</string>
    <string name="select_product_alcohol_percent_text">Alcohol percent</string>
    <string name="select_product_alcohol_percent"> %s%%</string>

    <string name="product_alcohol_yes">Yes</string>
    <string name="product_alcohol_no">No</string>
</resources>